aptos-move/flow/src/tests/move_package_verify/verify_failure.exp
is_error: true
verification failed:
error: post-condition does not hold
  ┌─ <TEMPDIR>/bad_spec.move:6:9
  │
6 │         ensures result == x + 1;
  │         ^^^^^^^^^^^^^^^^^^^^^^^^
  │
  =     at <TEMPDIR>/bad_spec.move:2: double
  =         x = <redacted>
  =     at <TEMPDIR>/bad_spec.move:3: double
  =         result = <redacted>
  =     at <TEMPDIR>/bad_spec.move:4: double
  =     at <TEMPDIR>/bad_spec.move:6: double (spec)
