aptos-move/flow/src/tests/move_package_verify/verify_failure.rs
// Copyright (c) Aptos Foundation
// Licensed pursuant to the Innovation-Enabling Source Code License, available at https://github.com/aptos-labs/aptos-core/blob/main/LICENSE

use crate::tests::common;

#[tokio::test]
async fn move_package_verify_failure() {
    let pkg = common::make_package("bad_spec", &[(
        "bad_spec",
        "module 0xCAFE::bad_spec {
    fun double(x: u64): u64 {
        x * 2
    }
    spec double {
        ensures result == x + 1;
    }
}",
    )]);
    let dir = pkg.path().to_str().unwrap();
    let client = common::make_client().await;
    let result = common::call_tool(
        &client,
        "move_package_verify",
        serde_json::json!({ "package_path": dir }),
    )
    .await;
    let formatted = common::format_tool_result(&result);
    common::check_baseline(file!(), &formatted);
}
